# untitled

./: .gitignore  CMakeLists.txt
extlibs/Lua/: CMakeLists.txt
include/: Component.h  Const.h  Editor.h  Entity.h  Game.h  InputComponent.h  InputSystem.h  LogConfig.h  LuaEngine.h  LuaManager.h  Mediator.h  Object.h  RenderSystem.h  ResManager.h  Scene.h  Sprite.h  System.h  TiledMap.h  TiledSet.h  Transform.h  Utils.h  World.h
include/editor/: AnimationEditor.h  ConsoleEditor.h  ImGuiExt.h  TiledEditor.h
res/: config.json  main.lua
res/data/entity/: enemy.lua  player.lua
res/data/tiled/: environment.lua
res/libs/: entity-ext.lua  utils.lua
res/scenes/: main.json
res/tiled/: map.json
src/: Editor.cpp  Entity.cpp  Game.cpp  InputSystem.cpp  LuaEngine.cpp  Object.cpp  RenderSystem.cpp  ResManager.cpp  Sprite.cpp  TiledMap.cpp  TiledSet.cpp  World.cpp  main.cpp
src/editor/: AnimationEditor.cpp  ConsoleEditor.cpp  ImGuiExt.cpp  TiledEditor.cpp
src/imgui/: imgui-SFML.cpp
